# MPSML

./: .gitignore  .gitmodules  README.md
1D_Generator/: Fields.cxx  Generator.cxx  Generator.hpp  Instance.cxx  Instance.hpp  Makefile  Operators.cxx  Operators.hpp  README.md  Solver.cxx  config.ini  gendat.sh  main.cxx
2D_Generator/: 3x3_test.csv  README  README.md  README~  gencsv  generateCSV.cpp  genmethods.cpp  slurm.sh  slurm_25qbit.sh
2D_Generator/older_version/: makefile  results.eigenset
2D_Generator/src/: ArgumentMethods.h  IsingHamiltonian.cpp  IsingHamiltonian.h  StringsAndFormats.h  debug_flags.hpp  main.cpp
2D_Generator/testcode/: eigenset_test.cpp
2D_Generator/verification_scripts/: new_eigenset_reader.py  petsc_reader.py  sparse_verification.py  tensor.py
agrace2_work/generate_hamiltonion/: ADMT  DMT  DynamicMatrix.cpp  DynamicMatrix.h  DynamicMatrixTest.cpp  IsingHamiltonian.cpp  IsingHamiltonian.h  driver  driver.cpp  jterms.txt  jterms2.txt  magma_hamiltonian.cpp  makefile  out.txt  test  test.cpp
agrace2_work/onenode/: BxMat_2.dynamicmatrix  BxMat_3.dynamicmatrix  BzMat_2.dynamicmatrix  BzMat_3.dynamicmatrix  DynamicMatrix.cpp  DynamicMatrix.h  IsingHamiltonian.cpp  IsingHamiltonian.h  JMat_2.dynamicmatrix  JMat_3.dynamicmatrix  dhogs  main.cpp  makefile  slurm.sh
agrace2_work/slepc/: SOHG.cpp  SlepcIsingHamiltonian.cpp  SlepcMat.cpp  SlepcMat.h  SlepcMat_backup.cpp  makefile  makefile~  mt  oldmakefile  output_sohg.txt  psohg  slepc_ising_gen.cpp  slepcmattest.cpp  slurm_execute.sh  slurmtest2.sh  sohg  tasks.txt  test.cpp
code/: .t.cxx.swp  .ycm_extra_conf.py  CMakeCache.txt  go.sh  plot-cost-vs-lambda.gnu
code/cmake/: CMakeLists.txt  makefile
code/docs/: .gitignore
code/etc/: Doxyfile  LICENSE  dirs.txt  exhaustive.in  go.sh  phynet.in  t.cxx
code/mps/: .gitignore  10_qubit_crit_data.npz  11_qubit_crit_data.npz  12_qubit_crit_data.npz  2_Qubit_test.ipynb  2_qubit_crit_data.npz  2_site_model.pt  4_qubit_crit_data.npz  6_Qubit_test-Copy2.ipynb  6_Qubit_test.ipynb  6_qubit_crit_data.npz  7_qubit_crit_data.npz  Active_Learning.ipynb  Data_reading_tests.ipynb  EigensetReader.py  Final_Model_MPS_5.pt  MPS_Generator.ipynb  MPS_Generator_2d.ipynb  Read_bin_test.ipynb  Times.ipynb  active_encoder.py  auto_encoder.py  auto_encoder2d.py  data_gen.py  matrix_functions.ipynb  mps_2_down_matrix.csv  mps_2_up_matrix.csv  readme_for_tensor_funcs.txt  release  requirements.txt  run_learning.sh  tensor_net_func.py  tensor_net_functions.ipynb  test_data_1.p  warmup_data_1.p  warmup_data_2.p
code/scripts/: calc-fidelity.cpp  calc-pred-p.cpp  calc-stats-vs-epochs.cpp  convert_mnist.cpp  run-datgen
code/test/: a.out  t.cxx
eigen_matrix_generation/: DynamicMatrix.cpp  DynamicMatrix.h  EigenIsingHamiltonian.cpp  eigen_checker.cpp  eigen_version.cpp  eigencheck  makefile
final_gen_solve/: EigensetLib.cpp  EigensetReader.py  README.md  checkmethods.cpp  eigenset_visualizer.cpp  eigenvaluecheck.py  gencsv  generateCSV.cpp  generated.csv  genmethods.cpp  makefile  matgen  pure_petsc_mat_gen.cpp  results.eigenset  slurm-bridges.sh  slurm.sh  test.py  vectorlib.cpp  verifier.py
final_gen_solve/csvs/: lines.csv  shehtabtest.csv  single.csv  surfaceplot.csv
final_gen_solve/generated_eigenvectors/: Eigenvalue-J-1.000000-Bx-1.000000-Bz-0.050000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-0.160000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-0.270000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-0.380000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-0.490000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-0.600000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-0.710000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-0.820000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-0.930000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-1.040000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-1.150000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-1.260000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-1.370000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-1.480000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-1.590000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-1.700000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-1.810000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-1.920000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-2.030000  Eigenvalue-J-1.000000-Bx-1.000000-Bz-2.140000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-0.050000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-0.160000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-0.270000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-0.380000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-0.490000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-0.600000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-0.710000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-0.820000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-0.930000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-1.040000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-1.150000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-1.260000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-1.370000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-1.480000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-1.590000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-1.700000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-1.810000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-1.920000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-2.030000  Eigenvalue-J-1.000000-Bx-1.050000-Bz-2.140000  (+360 more)
final_gen_solve/verification_results/: shehtabtest.txt  test1.txt
manuscripts/algorithm/: makefile
manuscripts/physics/: makefile
matrix_generation/: DynamicMatrix.cpp  DynamicMatrix.h  EigenIsingHamiltonian.cpp  IsingHamiltonian.cpp  IsingHamiltonian.h  J1.000000Bx1.000000Bz1.000000.eigenpair  README.md  dhogs  gencsv  generateCSV.cpp  generated.csv  main-file-based.cpp  main.cpp  makefile  matgen  output.txt  pythonEigenreader.py  sampleinput.csv  slurm.sh  vectorlib.cpp
matrix_generation/notes/: Bz pattern notes  J terms notes.txt
matrix_generation/pure_petsc/: genmethods.cpp  makefile  pure_petsc_mat_gen.cpp
meetings/2019-09-05/: .note.txt.swp  data-layout.key
meetings/2019-09-12/: update-and-planning (1).pptx  update-and-planning.key
results/lyapunov/: bb-cri-hist.txt  bb-sub-hist.txt  bb-sup-hist.txt  c2-cri-hist.txt  c2-sub-hist.txt  c2-sup-hist.txt  field-lyapunov-bb.txt  field-lyapunov-c2.txt  (+6 more)
(+1683 files in other folders)
